--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.17.0",
-    "npm": "8.14.0"
+    "node": ">=14.0"
   },
   "engineStrict": true,
   "scripts": {
