--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.0.7",
     "autoprefixer": "^10.3.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
